# WebServiceTestCibus

./: Dockerfile  LICENSE  README.md  WebServiceCibus.postman_collection.json  WebServiceCibus.postman_collection_repl.json  app.py  conftest.py  pyproject.toml  requirements.txt  runDocker.bat  web_services_tests.py
.github/workflows/: docker-image.yml
DbOperations/: DbOperations.py  RetryingQuery.py  UserMsgs.db  config.py  db.sql
DockerForPlaywright/: dockerfile
Modal/: Message.py  users_login_sessions.py
SiteScrapers/: Indeed_positions_extraction.py  Reddit_positions_extraction.py  amazon.py  ebay_products_extraction.py  twiter_twits_extraction.py  yelp_products_extraction.py
SiteScrapers/CnnScraper/: CnnScrraper.py  cnn.py
SiteScrapers/IndeedScrraping/: Indeed_positions_extraction.py  ScrapeIndeedJobIDS_SCRIPT.py
SiteScrapers/Medium/: CnnMedium.py  MediumScrapper.py
SiteScrapers/RedditScrraping/: Reddit.py  Reddit_positions_extraction.py
Utils/: exception_ops.py  users_login_sessions.py
unit_testing/: web_services_tests.py
